# PhantomChat.BlackboxTestBDD

./: .env.example  README.md  behave.ini  pyproject.toml
.github/workflows/: bdd.yml
features/: call_signaling.feature  chat_room.feature  crypto_contract.feature  encrypted_transport.feature  environment.py  file_transfer.feature
features/steps/: connection_steps.py  crypto_steps.py  http_steps.py
src/phantomchat_blackbox/: __init__.py  config.py  crypto.py  http_client.py  protocol.py  runtime.py  socket_client.py  webrtc.py  world.py
src/phantomchat_blackbox/loadtest/: __init__.py  __main__.py  config.py  multiproc_runner.py  reporting.py  runner.py
test-results/: TESTS-call_signaling.xml  TESTS-chat_room.xml  TESTS-crypto_contract.xml  TESTS-file_transfer.xml  loadtest-100u.json  loadtest-10u.json  loadtest-25u.json  loadtest-50u.json
