[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomchat-blackbox-bdd"
version = "0.1.0"
description = "Black-box BDD integration tests for PhantomChat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "behave>=1.2.6,<2",
    "pynacl>=1.5,<2",
    "requests>=2.32,<3",
    "websocket-client>=1.8,<2",
    "websockets>=13,<16",
]

[project.scripts]
phantomchat-loadtest = "phantomchat_blackbox.loadtest.__main__:main"

[project.optional-dependencies]
webrtc = [
    "aiortc>=1.10,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
